[package]
name = "n2o_sensor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nmea = "0.4.0"
log = "0.4"
pretty_env_logger = "0.4"
dotenv = "0.15.0"
file-rotate = "0.7.4"
chrono = "0.4.24"
csv = "1.2.1"
serialport = {version="4.2.1",  default-features = false}
glob = "0.3.1"
